--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:next": "next start",
+    "dev:next": "next dev"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "bootstrap": "^5.3.2",
+    "next": "14.0.4",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
